--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,14 @@
   <%= devise_error_messages! %>
 
   	<div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: "form-control", :autofocus => true %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control", :autofocus => true %>
     </div>
+
+	  <div class="form-group">
+	  	<%= f.label :email %>
+	  	<%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
+	  </div>
 
 	  <div class="form-group">
 	  	<%= f.label :password %>
